[tool.poetry]
name = "halp-backend"
version = "0.1.0"
description = "Backend for the Halp mobile app"
authors = ["Peijun Ma <peijun.ma@protonmail.com>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "~3.7"
django = "^2.1"
option = "^0.2.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.6"
pytest-django = "^3.4"
pytest = "^4.0"
